# perceived-and-effective

./: README.md  curls.txt
src/: .env.example  docker-compose.yaml
src/TaskAppraisal/TaskAppraisal.xcodeproj/: project.pbxproj
src/TaskAppraisal/TaskAppraisal.xcodeproj/project.xcworkspace/xcuserdata/murilocoutooliveira.xcuserdatad/: UserInterfaceState.xcuserstate
src/TaskAppraisal/TaskAppraisal.xcodeproj/xcuserdata/murilocoutooliveira.xcuserdatad/xcschemes/: xcschememanagement.plist
src/TaskAppraisal/TaskAppraisal/Source/: Models.swift  TaskAppraisalApp.swift
src/TaskAppraisal/TaskAppraisal/Source/Managers/: AuthManager.swift
src/TaskAppraisal/TaskAppraisal/Source/Services/: APIService.swift
src/TaskAppraisal/TaskAppraisal/Source/Views/: ContentView.swift
src/TaskAppraisal/TaskAppraisal/Source/Views/Auth/: LoginView.swift  RegisterView.swift
src/TaskAppraisal/TaskAppraisal/Source/Views/Feed/: AppraisalFeedView.swift  AppraisalSheet.swift  TaskCard.swift
src/TaskAppraisal/TaskAppraisal/Source/Views/Shared/: Components.swift
src/agents/: .env.example  Dockerfile  pyproject.toml
src/agents/src/: main.py  prompts.py
src/agents/src/agents/: effective.py  recommendation.py
src/agents/src/core/: config.py
src/agents/src/routes/: appraisal.py  recommendation.py
src/agents/src/schemas/: appraisal.py  recommendation.py
src/bff/: .env.example  Dockerfile  pyproject.toml
src/bff/src/: main.py
src/bff/src/api/routes/: appraisals.py  auth.py  tasks.py
src/bff/src/api/schemas/: appraisals.py  auth.py  send_appraisal.py  tasks.py
src/bff/src/core/: config.py  database.py  security.py
src/bff/src/data/models/: appraisals.py  base.py  projects.py  recommendation.py  tasks.py  users.py
src/bff/src/pipeline/gitlab_sync/: sync.py
