[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "murilo-oliveira-core",email = "murilo.oliveira@coreai.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "agents", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
