[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "murilo-oliveira-core",email = "murilo.oliveira@coreai.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)",
    "google-adk (>=1.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "agents", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
