[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "murilo-oliveira-core",email = "murilo.oliveira@coreai.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)",
    "bcrypt (>=4.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "apscheduler (>=3.10.0,<4.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "email-validator (>=2.0.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
